# pwnedkeys-api-client-rust

pwnedkeys/: Cargo.toml
pwnedkeys-client/: Cargo.toml
pwnedkeys-client/src/: client.rs  error.rs  lib.rs
pwnedkeys-core/: Cargo.toml
pwnedkeys-core/src/: error.rs  key.rs  lib.rs
pwnedkeys/src/: lib.rs
